--- a/solace/theme/cp.css
+++ b/solace/theme/cp.css
@@ -43,7 +43,7 @@ ul.cplist {
   	padding-left: 15px;
 }
 
-.panel-container li.header dl.icon dt .list-inner {
+.panel-container li.header dl.row-item dt .list-inner {
   padding-left: 77px;
 }
 
